--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,7 +24,7 @@
                     <span class="brand"><%= item.marca %></span>
                     <h3><%= item.nome %></h3>
                     <p class="price">R$ <%= item.preco.toLocaleString('pt-BR', { minimumFractionDigits: 2 }) %></p>
-                    <a href="/tenis/<%= item._id %><%= isAdmin ? '?admin=true' : '' %>" class="btn-details">Ver Detalhes</a>
+                    <a href="/tenis/<%= item.id %><%= isAdmin ? '?admin=true' : '' %>" class="btn-details">Ver Detalhes</a>
                 </div>
             </div>
         <% }) %>
