--- a/views/admin/editar.ejs
+++ b/views/admin/editar.ejs
@@ -14,7 +14,7 @@
     <main class="admin-content">
         <h1>Editar Tênis: <%= item.nome %></h1>
         
-        <form action="/admin/editar/<%= item._id %>?_method=PUT&admin=true" method="POST" class="admin-form">
+        <form action="/admin/editar/<%= item.id %>?_method=PUT&admin=true" method="POST" class="admin-form">
             <div class="form-group">
                 <label for="nome">Nome do Produto</label>
                 <input type="text" id="nome" name="nome" value="<%= item.nome %>" required>
