--- a/views/admin/criar.ejs
+++ b/views/admin/criar.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header', { isAdmin: true }) %>
+<%- include('../partials/header', { isAdmin: true, isLoggedIn: true }) %>
 
 <div class="admin-container">
     <aside class="admin-sidebar">
